Update HttpServer.java